<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:padding="0dp"
    android:paddingBottom="0dp"
    tools:context="com.lukederrynz.application_Hub.MainActivity">

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:background="@color/colorPrimaryDark"
        android:clipChildren="true"
        android:columnCount="3"
        android:columnOrderPreserved="false"
        android:padding="0dp"
        android:rowCount="3"
        android:useDefaultMargins="false"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/button_TTS"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_columnWeight="0"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:layout_rowWeight="0"
            android:background="@drawable/rectangle_rounded"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="startActivityTTS"
            android:text="@string/button_StartTextToSpeech" />

        <Button
            android:id="@+id/button_StartWeatherActivity"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:layout_rowWeight="2"
            android:background="@drawable/rectangle_rounded"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="startActivityWeather"
            android:text="@string/button_StartWeatherActivity" />

        <Button
            android:id="@+id/button_StartCalculatorActivity"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_columnWeight="2"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:layout_rowWeight="0"
            android:background="@drawable/rectangle_rounded"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="startActivityCalculator"
            android:text="@string/button_StartCalculator" />

        <Button
            android:id="@+id/button6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_columnWeight="2"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:layout_rowWeight="1"
            android:background="@drawable/rectangle_rounded"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button_UNUSED" />

        <Button
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="2"
            android:layout_columnWeight="0"

            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:background="@drawable/rectangle_rounded"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button_UNUSED" />

        <Button
            android:id="@+id/button4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_columnWeight="0"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:layout_row="2"
            android:layout_rowWeight="2"
            android:background="@drawable/rectangle_rounded"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button_UNUSED" />

        <Button
            android:id="@+id/button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:layout_row="1"
            android:layout_rowWeight="0"
            android:background="@drawable/rectangle_rounded"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button_UNUSED" />

        <Button
            android:id="@+id/button3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:layout_row="2"
            android:layout_rowWeight="2"
            android:background="@drawable/rectangle_rounded"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button_UNUSED" />
    </GridLayout>

</android.support.constraint.ConstraintLayout>
