<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context="com.lukederrynz.application_Hub.CalculatorActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/Calculator_textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="12.5"
            android:background="@color/colorAccent"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.5" />

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="85"
            android:orientation="horizontal"
            android:weightSum="100">

            <android.support.v7.widget.GridLayout
                android:id="@+id/Calculator_numbersGridLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                app:columnCount="3"
                app:layout_constraintTop_toBottomOf="@+id/Calculator_textView"
                app:rowCount="4">

                <Button
                    android:id="@+id/Calculator_num6"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@color/colorAccent"
                    android:text="6"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_column="2"
                    app:layout_columnWeight="33.33"
                    app:layout_row="1"
                    app:layout_rowWeight="25" />

                <Button
                    android:id="@+id/Calculator_num8"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@color/colorAccent"
                    android:text="8"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_column="1"
                    app:layout_columnWeight="33.33"
                    app:layout_row="0"
                    app:layout_rowWeight="25" />

                <Button
                    android:id="@+id/Calculator_num4"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@color/colorAccent"
                    android:text="4"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_columnWeight="33.33"
                    app:layout_rowWeight="25" />

                <Button
                    android:id="@+id/Calculator_num5"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@color/colorAccent"
                    android:text="5"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_columnWeight="33.33"
                    app:layout_rowWeight="25" />

                <Button
                    android:id="@+id/Calculator_num3"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@color/colorAccent"
                    android:text="3"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_column="2"
                    app:layout_columnWeight="33.33"
                    app:layout_row="2"
                    app:layout_rowWeight="25" />

                <Button
                    android:id="@+id/Calculator_num9"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@color/colorAccent"
                    android:text="9"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_column="2"
                    app:layout_columnWeight="33.33"
                    app:layout_row="0"
                    app:layout_rowWeight="25" />

                <Button
                    android:id="@+id/Calculator_num2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@color/colorAccent"
                    android:text="2"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_column="1"
                    app:layout_columnWeight="33.33"
                    app:layout_row="2"
                    app:layout_rowWeight="25" />

                <Button
                    android:id="@+id/Calculator_num0"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@color/colorAccent"
                    android:text="0"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_column="0"
                    app:layout_columnWeight="33.33"
                    app:layout_row="3"
                    app:layout_rowWeight="25" />

                <Button
                    android:id="@+id/Calculator_num7"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@color/colorAccent"
                    android:text="7"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_column="0"
                    app:layout_columnWeight="33.33"
                    app:layout_row="0"
                    app:layout_rowWeight="25" />

                <Button
                    android:id="@+id/Calculator_equals"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@color/colorAccent"
                    android:text="@string/Calculator_button_Equals"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_column="2"
                    app:layout_columnWeight="33.33"
                    app:layout_row="3"
                    app:layout_rowWeight="25" />

                <Button
                    android:id="@+id/Calculator_num1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@color/colorAccent"
                    android:text="1"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_column="0"
                    app:layout_columnWeight="33.33"
                    app:layout_row="2"
                    app:layout_rowWeight="25" />

                <Button
                    android:id="@+id/Calculator_Decimal"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:background="@color/colorAccent"
                    android:text="."
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_column="1"
                    app:layout_columnWeight="33.33"
                    app:layout_row="3"
                    app:layout_rowWeight="25" />
            </android.support.v7.widget.GridLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5" />

            <android.support.v7.widget.GridLayout
                android:id="@+id/Calculator_operatorsGridLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:layout_weight="25"
                app:columnCount="1"
                app:rowCount="5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/Calculator_numbersGridLayout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Calculator_textView">

                <Button
                    android:id="@+id/Calculator_Clear"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    app:layout_rowWeight="20"
                    android:background="@color/colorAccent"
                    android:text="@string/Calculator_button_Clear"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/Calculator_multiply"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    app:layout_rowWeight="20"
                    android:background="@color/colorAccent"
                    android:text="@string/Calculator_button_Multiply"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/Calculator_divide"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    app:layout_rowWeight="20"
                    android:background="@color/colorAccent"
                    android:text="@string/Calculator_button_Divide"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/Calculator_add"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    app:layout_rowWeight="20"
                    android:background="@color/colorAccent"
                    android:text="@string/Calculator_button_Add"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/Calculator_subtract"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    app:layout_rowWeight="20"
                    android:background="@color/colorAccent"
                    android:text="@string/Calculator_button_Subtract"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.GridLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
